--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 Mako==1.2.4
 MarkupSafe==2.1.1
+PyMySQL==1.0.2
 SQLAlchemy==1.4.45
 Werkzeug==2.2.2
 zipp==3.11.0
